--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Love ❤️ by AlexDev</title>
+  <title>feliz cumpleaños by yohnnier G</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,8 @@
 <body>
 <div class='wrapper'>
   
-  <div class='text'> I Love You ❤️ </div>
+  <h1 class="message">¡Feliz Cumpleaños! Lizy!! 🎉🥳</h1>
+    <h1 class="message">¡Que lo pases increíble!</h1>
   
   <div class="gif-container">
     <img src="assets/fondo.gif" alt="Flor animada">
