--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>feliz cumpleaños by yohnnier G</title>
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8" />
+  <title>Feliz Cumpleaños by Yohnnier G</title>
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine"
+    rel="stylesheet"
+  />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-<div class='wrapper'>
-  
-  <h1 class="message">¡Feliz Cumpleaños! Lizy!! 🎉🥳</h1>
+  <div class="wrapper">
+    <h1 class="message">¡Feliz Cumpleaños! 🎉🥳</h1>
     <h1 class="message">¡Que lo pases increíble!</h1>
-  
-  <div class="gif-container">
-    <img src="assets/fondo.gif" alt="Flor animada">
+
+    <div class="gif-container">
+      <img src="assets/fondo.gif" alt="Flor animada" />
+    </div>
   </div>
-  
-</div>
-<div class='whitespace'></div>
+  <div class="whitespace"></div>
 
-<script src="script.js"></script>
-
- <!-- 
-
-Contáctame:
-
-    * Invitame un café
- https://buymeacoffee.com/alexx.dev
-
-    * Sigueme en tiktok
- https://www.tiktok.com/@alexx.dev?is_from_webapp=1&sender_device=pc 
- 
-    *Canal de WhatsApp
- https://whatsapp.com/channel/0029VazQEXq90x2vIdNkrH1p
-
--->
-
-
+  <script src="script.js"></script>
+  <!-- 
+    Contáctame:
+      * Invítame un café: https://buymeacoffee.com/alexx.dev
+      * Sígueme en TikTok: https://www.tiktok.com/@alexx.dev
+      * Canal de WhatsApp: https://whatsapp.com/channel/0029VazQEXq90x2vIdNkrH1p
+  -->
 </body>
 </html>
