--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h1 class="message">¡Feliz Cumpleaños! 🎉🥳</h1>
+    <h1 class="message">¡Feliz Cumpleaños! Lizy 🎉🥳</h1>
     <h1 class="message">¡Que lo pases increíble!</h1>
 
     <div class="gif-container">
