--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Feliz Cumpleaños by Yohnnier G</title>
+  <title>¡Feliz Cumpleaños! Lizy que la pases super 🎉🥳</title>
+  <!-- Fuentes handwritten -->
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine"
@@ -12,22 +13,19 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+  <!-- Canvas para confetis explosivos -->
+  <canvas id="confetti-canvas"></canvas>
+
   <div class="wrapper">
-    <h1 class="message">¡Feliz Cumpleaños! Lizy 🎉🥳</h1>
-    <h1 class="message">¡Que lo pases increíble!</h1>
+    <!-- Mensaje en una sola línea con fuente handwritten -->
+    <h1 class="message">¡Feliz Cumpleaños Lizy que la pases super! 🎉🥳</h1>
 
     <div class="gif-container">
       <img src="assets/fondo.gif" alt="Flor animada" />
     </div>
   </div>
-  <div class="whitespace"></div>
 
+  <div class="whitespace"></div>
   <script src="script.js"></script>
-  <!-- 
-    Contáctame:
-      * Invítame un café: https://buymeacoffee.com/alexx.dev
-      * Sígueme en TikTok: https://www.tiktok.com/@alexx.dev
-      * Canal de WhatsApp: https://whatsapp.com/channel/0029VazQEXq90x2vIdNkrH1p
-  -->
 </body>
 </html>
